<resources>
    <string name="app_name">BitQuiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="play">PLAY</string>
    <string name="answer_d">Answer D</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_a">Answer A</string>
    <string name="which_one_is_better_you_or_me">Which one is better you or me??</string>
    <string name="_0">0</string>
    <string name="_1_30">1/30</string>
    <string name="passed_0_30">Passed : 0/30</string>
    <string name="try_again">Try Again</string>
    <string name="name">Name</string>
    <string name="category_name">Category Name</string>
    <string name="score">Score</string>

    <string name="action_sign_up_email">Create Account with Email</string>
        <string name="action_sign_in_short">Register</string>
        <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
        <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
        <string name="change_email">Change Email</string>
        <string name="change_password">Change Password</string>
        <string name="send_password_reset_email">Send Password reset email</string>
        <string name="remove_user">Remove user</string>
        <string name="new_pass">New Password</string>
        <string name="prompt_password">Confirm Password</string>
        <string name="title_activity_profile">Firebase</string>
        <string name="title_activity_login">Sign in</string>
        <string name="hint_email">Email</string>
        <string name="hint_password">Password</string>
        <string name="hint_referral">Referral Email Address (Optional)</string>
        <string name="hint_name">Fullname</string>
        <string name="btn_login">LOGIN</string>
        <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
        <string name="btn_link_to_login">Already registered. Login Me!</string>
        <string name="title_activity_reset_password">ResetPasswordActivity</string>
        <string name="btn_forgot_password">Forgot your password?</string>
        <string name="btn_reset_password">Reset Password</string>
        <string name="btn_back"><![CDATA[<< Back]]></string>
        <string name="hint_new_email">New Email</string>
        <string name="btn_change">Change</string>
        <string name="btn_send">Send</string>
        <string name="btn_remove">Remove</string>
        <string name="btn_sign_out">Sign Out</string>
        <string name="lbl_forgot_password">Forgot password?</string>
        <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

        <string name="watch_video_button_text">Watch Video for additional 100 coins</string>
        <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
        <string name="ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>

</resources>
